feat: fixed bugs and refactored game